--- a/style.css
+++ b/style.css
@@ -33,6 +33,12 @@ th {
     -1px -1px 0 #902d41,
     1px -1px 0 #902d41;
 }
+.outlined{
+  text-shadow: 1px 1px 0 #902d41,
+    -1px 1px 0 #902d41,
+    -1px -1px 0 #902d41,
+    1px -1px 0 #902d41;
+}
 *{
 font-family: hopetake;
 color: #902d41;
@@ -57,6 +63,7 @@ button{
     border-radius: 5px;
     font-size: 18px;
     margin: 7px;
+    padding: 10px;
 }
 button:hover{
     background-color: #fabc2a;
@@ -94,11 +101,7 @@ input[type="checkbox"]{
     flex-direction: row;
     border: none;
 }
-.containervert{
-  display:contents;
-    flex-direction:column;
-    border: none;
-}
+
 /* white#f2edeb;blue#1b998b;bright pink #ff007f;dark pink #902d41;yellow #fabc2a */
 /*navigation*/
 .topnav {
