--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
     min-width: 60%;
     max-width: 85%;
 }
-h1,h2,h3 {
+h1,h2,h3,h4 {
     font-family: hand;
     text-transform: uppercase;
     color: #fabc2a;
@@ -52,6 +52,11 @@ body{
 input {
   margin: 0;
   accent-color: #fabc2a;
+  background-color: #f2edeb;
+  border-color: #902d41;
+  border-style: dashed;
+  border-width: 2px;
+  border-radius: 5px;
 }
 input[type="range"]{
   width: 125px;
